--- a/formulario.html
+++ b/formulario.html
@@ -209,7 +209,7 @@
         crossorigin="anonymous"></script>
 
     <script>
-        const url = "http://127.0.0.1:8000/"
+        const url = "https://ssweapi.herokuapp.com/"
         var token = ''
         var cotacaovar = ''
         const gerarCota = () => {
